# web_crawler_v1

./: pyproject.toml
redditcrawler/: reddit.json
redditcrawler/redditcrawler/: items.py  middlewares.py  pipelines.py  settings.py
redditcrawler/redditcrawler/spiders/: redditcrawler.py
