[tool.poetry]
name = "my_project"
version = "0.1.0"
description = ""
authors = ["omanduj <omanduj@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
beautifulsoup4 = "^4.9.3"
lxml = "^4.6.3"
requests = "^2.26.0"
Scrapy = "^2.5.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
